<?xml version="1.0" encoding="utf-8"?>



   <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmento.PreguntaFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imagenlogo"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagenlogo"
            android:src="@drawable/ic_logodl"
            app:layout_constraintBottom_toTopOf="@+id/tituloPregunta"
            app:layout_constraintEnd_toEndOf="@+id/tituloPregunta"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/tituloPregunta"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/tituloPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pregunta"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pregunta"
        app:layout_constraintEnd_toEndOf="@+id/pregunta"
        app:layout_constraintStart_toStartOf="@+id/pregunta"
        app:layout_constraintTop_toBottomOf="@+id/imagenlogo" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tituloCategoria"
        app:layout_constraintEnd_toEndOf="@+id/tituloCategoria"
        app:layout_constraintStart_toStartOf="@+id/tituloCategoria"
        app:layout_constraintTop_toBottomOf="@+id/tituloPregunta" />

    <TextView
        android:id="@+id/tituloCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/categoria"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/categoria"
        app:layout_constraintEnd_toEndOf="@+id/TituloDificultad"
        app:layout_constraintStart_toStartOf="@+id/TituloDificultad"
        app:layout_constraintTop_toBottomOf="@+id/pregunta" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/TituloDificultad"
        app:layout_constraintEnd_toEndOf="@+id/TituloDificultad"
        app:layout_constraintStart_toStartOf="@+id/TituloDificultad"
        app:layout_constraintTop_toBottomOf="@+id/tituloCategoria" />


    <TextView
        android:id="@+id/TituloDificultad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dificultad"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Dificultad"
        app:layout_constraintEnd_toEndOf="@+id/Dificultad"
        app:layout_constraintStart_toStartOf="@+id/Dificultad"
        app:layout_constraintTop_toBottomOf="@+id/categoria" />

    <TextView
        android:id="@+id/Dificultad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGrupoRespuestas"
        app:layout_constraintEnd_toEndOf="@+id/radioGrupoRespuestas"
        app:layout_constraintStart_toStartOf="@+id/radioGrupoRespuestas"
        app:layout_constraintTop_toBottomOf="@+id/TituloDificultad" />

    <RadioGroup
        android:id="@+id/radioGrupoRespuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConsultaRespuesta"
        app:layout_constraintEnd_toEndOf="@+id/btnConsultaRespuesta"
        app:layout_constraintStart_toStartOf="@+id/btnConsultaRespuesta"
        app:layout_constraintTop_toBottomOf="@+id/Dificultad">

        <RadioButton
            android:id="@+id/radioRespuestaUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioRespuestaDos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </RadioGroup>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="80dp"
        android:background="#E91E63"
        android:paddingHorizontal="20dp"
        android:text="@string/ver_respuesta"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrupoRespuestas" />
    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


